# sdl2meson

./: .gitignore  meson.build
src/audio/: meson.build
src/core/: meson.build
src/file/: meson.build
src/filesystem/: meson.build
src/haptic/: meson.build
src/joystick/: meson.build
src/loadso/: meson.build
src/power/: meson.build
src/render/: SDL_render.c
src/thread/: meson.build
src/thread/windows/: meson.build
src/timer/: meson.build
src/video/: meson.build
test/: meson.build
